src/components/bs5/globalAlert/globalAlert.scss
/* ... */
@media (min-width: 768px) { // md and above
    .global-alert {
        .qld-global-alert-main {
            padding: 1rem 1rem;
            .global-alert-content {
                padding-left: 1rem;
                display: flex;
                align-items: center;
            }
        }
        .global-alert-message {
            padding: 0 3rem 0 1rem; // Also: 0 48px 0 16px, according to Health DS
            max-width: 80%;// Added to prevent Label from collapsing
        }
        .global-alert-icon {
            // temporary change to align icon with content
            align-self: center;
        }
        .global-alert-content {
            flex-direction: row !important;
        }
        .global-alert-action {
            margin-left: 2rem;
        }
    }

}

@media (max-width: 767.98px) { // sm and below
    .global-alert {
        .qld-global-alert-main {
            padding: 0.75rem 1rem; // Also 12px 16px
        }
        .global-alert-content {
            padding: 0 1rem 0 0.75rem; // Also 0 16px 0 12px
        }
    }
    
    .global-alert-icon {
        // aligning with text
        padding-top: 0.75rem;
    }
}

@include media-breakpoint-up(lg) { // 992px and above

    .global-alert {
        &.global-alert-critical {
        border-top: 0.063rem solid var(--#{$prefix}core-default-color-status-error-darker);
        }
        &.global-alert-warning {
            border-top: 0.063rem solid var(--#{$prefix}core-default-color-status-caution-darker);
        }
        &.global-alert-info {
            border-top: 0.063rem solid var(--#{$prefix}core-default-color-status-info-darker);
        }
        .global-alert-icon {
            // aligning with text
            padding-top: 1.375rem;
            // temporary change to align icon to center
            align-self: center;
        }
        .qld-global-alert-main {
            // Padding requires 64px in space between alert icon and left border; minus (24px(1.5rem) gutter + 16px padding) = 24px (1.5rem)
            padding-left: 1.5rem;
            .global-alert-content {
                padding-left: 1rem; // Also: 16px
            }
        }
        
    }
}

